--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8081
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
+springdoc.swagger-ui.path=/api-doc
+springdoc.swagger-ui.operationsSorter=method
