--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,37 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# dependencies
+/FRONTEND/node_modules
+/FRONTEND/.pnp
+.pnp.js
+
+# testing
+/FRONTEND/coverage
+
+# next.js
+/FRONTEND/.next/
+/FRONTEND/out/
+
+# production
+/FRONTEND/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
