--- a/FRONTEND/survey-microservice/.eslintrc.json
+++ b/FRONTEND/survey-microservice/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "plugin:storybook/recommended",
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "root": true,
+  "rules": {
+    "@typescript-eslint/no-floating-promises": ["error"]
+  },
+  "parserOptions": {
+    "project": ["**/tsconfig.json"] // Specify it only for TypeScript files
+  }
 }
